Initial pass at writing the local backup walk-through

--- a/_pages/03._quickstart.md
+++ b/_pages/03._quickstart.md
@@ -11,7 +11,58 @@ hide_hero: true
 
 ## Local files to a remote server over SSH
 
-Instructions here.
+### Requirements
+
+1. You need docker installed
+2. You need an S3 style storage account -- in this example, we're using Digital Ocean 
+3. You need to generate an access key set to use your storage provider's API to run the sync
+4. You need to know the absolute path to the local files to back up
+5. You need to know the absolute path to the configuration directory for the back-ups you're running
+
+### Configuration
+
+For this example, let's say you are building out your Tractor Beam back-ups in `/home/ten7/config`.
+
+In that config directory you *need* a `tractorbeam` directory containing `tractorbeam.yml`
+
+```
+/home
+  /ten7
+    /config
+      /tractorbeam
+        tractorbeam.yml
+      /keys
+        access.txt
+        secret.txt
+```
+
+It's best to keep your API keys out of any code which could be committed to a repository. So here we have them in a `keys` subdirectory.
+
+### tractorbeam.yml
+
+```yaml
+
+```
+
+### Command to run
+
+```bash
+docker run --rm \
+  -v /local/path/to/project:/backups \
+  -v /local/path/to/config:/config \
+  ten7/tractorbeam tractorbeam daily
+```
+
+Command breakdown:
+
+- `docker run --rm` <br> this will run the container once and destroy the container (not your files) when it's done
+- `-v` <br> this is asking docker to mount the directory before colon inside the container as the path defined after the colon
+- `/local/path/to/project` <br> the complete path of the local directory to back-up which gets mounted in the container as /backups
+    - this is recursive by default and will sync whatever is in this directory
+- `/local/path/to/config` <br> the directory with the config files for the back-up process which gets mounted in the container as /config
+- `ten7/tractorbeam` <br> the name of the image on Docker Hub that will be used to build the container
+- `tractorbeam daily` <br> calls the tactorbeam script and asks it to run the daily backup, or whichever backup set you want
+
 
 ## Remote server to remote server over SSH
 
