Saving missed changes

--- a/_pages/03._quickstart.md
+++ b/_pages/03._quickstart.md
@@ -40,9 +40,44 @@ It's best to keep your API keys out of any code which could be committed to a re
 
 ### tractorbeam.yml
 
-```yaml
+Your configuration file for Tractor Beam should look like this:
 
+```yaml
+tractorbeam:
+  backupSets:
+    daily: {}
+    weekly: {}
+    monthly: {}
+  local:
+    - path: "/backups"
+      provider: "Digitalocean"
+      bucket: "my_project"
+      prefix: "my_project_backups/files"
+      accessKeyFile: "/config/keys/access.txt"
+      secretKey: "/config/keys/secret.txt"
+      endpoint: "https://nyc3.digitaloceanspaces.com"
+      region: "nyc3"
+      disabled: false
+      backupSets:
+        - "daily"
+        - "weekly"
+        - "monthly"
 ```
+
+Let's go over the parts of this file
+
+- backupSets are required even if you're doing super simple back-ups so you can start with empty sets to start
+- in the `local` block we define the path to the backups as `/backup` by default
+- `provider` is the S3 compatible cloud provide you're using; we're using Digital Ocean for this example
+- `bucket` is the name of the storage you've set up in the cloud provider; we have Digital Ocean Spaces named `my_project`
+- `prefix` is the path in the storage that will be used for this back-up
+- `accessKeyFile` is the first part of the api key you generated
+- `secretKeyFile` is the second part of the api key you generated
+- Note: a personal access token usually isn't what you want, you want a storage api key
+- `endpoint` is where your storage is located with the cloud provider; we've put our Digital Ocean end point address
+- `region` is an optional parameter including helps
+- `disabled: false` is optional but is great to set up so if you ever have to quickly disable it's already set up
+- `backupSets` specifies which types of backup sets this can be included in 
 
 ### Command to run
 
