Adding an example of successful output

--- a/_pages/03._quickstart.md
+++ b/_pages/03._quickstart.md
@@ -98,6 +98,74 @@ Command breakdown:
 - `ten7/tractorbeam` <br> the name of the image on Docker Hub that will be used to build the container
 - `tractorbeam daily` <br> calls the tactorbeam script and asks it to run the daily backup, or whichever backup set you want
 
+#### Example Output
+
+When you run the command successfully you will see output similar to this:
+
+```
+docker-entrypoint.sh: Beginning initialization...
+docker-entrypoint.sh: Initialization complete. Starting container...
+
+PLAY [backup] ******************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [localhost]
+
+TASK [tractorbeam : Get a list of backupSets.] *********************************
+ok: [localhost]
+
+TASK [tractorbeam : Stop if the backupSet doesn't exist.] **********************
+skipping: [localhost]
+
+TASK [tractorbeam : Get the backupSet daily.] **********************************
+ok: [localhost]
+
+TASK [tractorbeam : Generate the backup timestamp.] ****************************
+ok: [localhost]
+
+TASK [tractorbeam : Create a temp directory to store files needed by the run] ***
+changed: [localhost]
+
+TASK [tractorbeam : Work with databases] ***************************************
+
+TASK [tractorbeam : Work with pantheon backups] ********************************
+
+TASK [tractorbeam : Work with platform.sh databases] ***************************
+
+TASK [tractorbeam : Work with archives] ****************************************
+
+TASK [tractorbeam : Work with file backups] ************************************
+
+TASK [tractorbeam : Work with platform.sh files] *******************************
+
+TASK [tractorbeam : Work with local files] *************************************
+included: /ansible/roles/tractorbeam/tasks/local.yml for localhost
+
+TASK [tractorbeam : Create a tempfile for the rclone config] *******************
+changed: [localhost]
+
+TASK [tractorbeam : Template the rclone conf] **********************************
+changed: [localhost]
+
+TASK [tractorbeam : Sync files using rclone] ***********************************
+changed: [localhost]
+
+TASK [tractorbeam : include_tasks] *********************************************
+included: /ansible/roles/tractorbeam/tasks/healhcheck.yml for localhost
+
+TASK [tractorbeam : Send ping to healthchecks.io] ******************************
+skipping: [localhost]
+
+TASK [tractorbeam : Work with s3 backups] **************************************
+
+RUNNING HANDLER [tractorbeam : delete temp items] ******************************
+changed: [localhost] => (item=/tmp/tractorbeam-run-202201272104081arap1bb)
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=11   changed=5    unreachable=0    failed=0    skipped=9    rescued=0    ignored=0  
+```
+
+You'll see the recap at the end that should say **failed=0** 
 
 ## Remote server to remote server over SSH
 
